Update phone number format in contact section

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                             </div>
                             <div class="contact-item">
                                 <strong>Phone:</strong>
-                                <span>+971 2 123 4567</span>
+                                <span>+971 123 4567</span>
                             </div>
                             <div class="contact-item">
                                 <strong>Hours:</strong>
@@ -559,7 +559,7 @@
                             </div>
                             <div class="contact-item">
                                 <strong>Hotline:</strong>
-                                <span>+971 2 123 4567</span>
+                                <span>+971 123 4567</span>
                             </div>
                             <div class="contact-item">
                                 <strong>Hours:</strong>
